refactor the tests into test and integration tests, greatly simplifying how to setup and run the larger/slower tests